[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/title-screen.png" type="Texture" id=1]
[ext_resource path="res://src/start/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://src/ui/buttons/DefaultButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/m6x11.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 3
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -1.1225, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Start" parent="." instance=ExtResource( 4 )]
margin_left = 501.0
margin_top = 540.0
margin_right = 606.0
margin_bottom = 583.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "START"
script = null

[node name="Continue" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 477.172
margin_top = 404.159
margin_right = 559.172
margin_bottom = 430.159
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"
script = null

[node name="Test" type="Button" parent="."]
margin_left = 208.147
margin_top = 25.2486
margin_right = 365.147
margin_bottom = 99.2486
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Test" to="." method="_on_Test_pressed"]
